<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/menu_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_task_list"
        android:orderInCategory="100"
        android:title="@string/menu_task_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_delivery_form"
        android:orderInCategory="100"
        android:title="@string/menu_delivery_form"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_payment_form"
        android:orderInCategory="100"
        android:title="@string/menu_payment_form"
        app:showAsAction="never" />


</menu>