<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnChooseStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_start_date"
        android:textSize="18sp" />

    <CalendarView
        android:id="@+id/clndrViewStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/btnChooseEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_end_date"
        android:textSize="18sp" />

    <CalendarView
        android:id="@+id/clndrViewEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/btnTaskOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_task_ok"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnReturnFromTaskList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/corners"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_main_activity"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>