<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="text"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_save"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnReturnFromNotes"
        app:layout_constraintEnd_toEndOf="@+id/editTextNote"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNote" />

    <Button
        android:id="@+id/btnReturnFromNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_main_activity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSaveNote"
        app:layout_constraintStart_toStartOf="@+id/btnSaveNote" />

</androidx.constraintlayout.widget.ConstraintLayout>